# shiv

./: Cargo.toml  Makefile  README.md
.github/workflows/: readme.yaml  test.yaml
polkit/: com.github.shiv.pkexec.policy
src/: cli.rs  keyboard.rs  main.rs  permission.rs  permissions.rs  terminal.rs  uinput.rs  utils.rs
