[package]
name = "shiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
evdev = {version="0.12.1", features=["tokio"]}
lazy_static = "1.4.0"
log = "0.4.17"
tokio = {version="1.26.0", features=["full"]}
tokio-stream = "0.1.12"

[[bin]]
name = "shiv"
path = "src/main.rs"
